# src/main/java/com/multirepo/demo/service/HealthController.java
@@ -1,4 +1,4 @@
-package com.cargurus.service;
+package com.multirepo.demo.service;
 
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
